<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="nul"></string>
    <string name="timeline">Timeline</string>
    <string name="notifications">Notifications</string>
    <string name="app_name">AdventourUs</string>
    <string name="intf_fileupload2">goAdventourUs</string>
    <string name="loading_data">Loading&#8230;</string>
    <string name="protocol">Protocol</string>

    <string-array name="supported_protocols">
 <!-- this is NOT dynamic! -->
        <item>http</item>
        <item>https</item>
    </string-array>

    <string name="server">Server</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="app_title_html">goAdventourUs</string>
    <string name="upload_file">Upload a photo</string>
    <string name="upload_now">Start upload</string>
    <string name="viewLatLon">Location</string>
    <string name="proxy_settings"><u>Proxy / SSL Settings...</u></string>
    <string name="post_status_update">Post Status Update</string>
    <string name="post">Post</string>
    <string name="mm_timeline">Timeline</string>
    <string name="mm_notifications">Notifications</string>
    <string name="mm_mywall">My Wall</string>
    <string name="mm_myphotoalbums">My Photo Albums</string>
    <string name="mm_friends">Friends</string>
    <string name="mm_directmessages">Messages</string>
    <string name="mm_updatemystatus">Update My Status</string>
    <string name="menuitem_map">Routes</string>
    <string name="menuitem_routes">Routes</string>
    <string name="mm_takephoto">Take Photo And Upload</string>
    <string name="mm_selectphoto">Select Photo And Upload</string>
    <string name="mm_preferences">Preferences</string>
    <string name="mm_logout">Log Out</string>
    <string name="fake_data_notice">NOTE: As Friendica\&apos;s API doesn\&apos;t support photo albums at the moment, only example photos from my Panoramio profile are shown. <i>(tap to close)</i></string>

    <string-array name="notification_intervals">
        <item>every 15 minutes</item>
        <item>every half hour</item>
        <item>every hour</item>
        <item>every half day</item>
        <item>every day</item>
    </string-array>
    <string-array name="notification_interval_values">
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>
        <string name="post_image_description_field">Description:</string>
        <string name="contentDescription_profile_image">Profile Image</string>
        <string name="contentDescriptionUploadImagePreview">Preview of image to upload</string>
        <string name="input_label_post_title">Post Title (optional):</string>
        <string name="imageAltText">Image</string>
        <string name="titlePlaceholder">Title</string>
        <string name="descriptionPlaceholder">Description</string>
        <string name="addressPlaceholder">Address</string>
        <string name="close">Close</string>

</resources>